FlightPath 5.x Changelog
========================

2016-02-18
  Fixed stray mysql_insert_id() command in _FlightPath.php.  Changed to db_insert_id().
  
  Made it to where if you skipped semesters on the degrees page, it will still show the blank
  boxes, at least before where you skipped.
  
  Fixed issue so that public notes (on degrees) show up correctly, no matter how many degrees
  are being combined.  


2016-02-17
  Fixed bug where group id was not being maintained for certain groups in popup window.
  
  Made various changes in an attempt to help speed up page loads.


2016-02-15
  Fixed bug in misc.inc which was causing a new database connection *every time* a connection was requested (instead of re-using the
  global one).
  

2016-02-13
  Fixed bug in install script so that track major codes can have up to 20 characters.
  
  Modified the add degree form, to check to make sure tracks and major codes don't contain spaces,
  as well as fall below the 20 character limit.
  
  Fixed but which was intruduced by removing submissions form sessions.  As a result, forms which didn't
  validate didn't retain values.  Instead made it so only password fields were hidden from the session.
  
  Added concept of an "advising weight" to degrees, and on the degree edit form.  This lets the admin set
  the order in which degrees are presented to a student.  Lower weights appear first.  Added new popup help
  topics to the degree edit page to help explain.
    

2016-02-11
  Made it to where combined degrees will overwrite semester block titles if they are set to.
  

2016-02-09
  Fixed MySQL bug when editing groups.  Fixed bug where group_min_hours_required should be group_min_hours_allowed in the database.
  Fixed bug in degree list filter when not using clean URLs.
  Fixed missing argument bug in db.inc for db_affected_rows().
  

2016-02-01
  Removed section from system.module where submissions were being temporarily stored in the session.  It wasn't being used anyway,